--- a/data/ui/add-applet.ui
+++ b/data/ui/add-applet.ui
@@ -9,12 +9,15 @@
       <column type="gchararray"/>
       <!-- column-name desc -->
       <column type="gchararray"/>
+      <!-- column-name info -->
+      <column type="gpointer"/>
     </columns>
   </object>
   <object class="GtkDialog" id="dialog">
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
     <property name="title" translatable="yes">Add applets to the panel</property>
+    <property name="default_height">400</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
@@ -84,14 +87,23 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="model">applet_store</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="name">
                     <property name="title" translatable="yes">Name</property>
                     <child>
                       <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf1"/>
+                      <attributes>
+                        <attribute name="pixbuf">0</attribute>
+                      </attributes>
                     </child>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                      <attributes>
+                        <attribute name="text">1</attribute>
+                      </attributes>
                     </child>
                   </object>
                 </child>
@@ -100,6 +112,9 @@
                     <property name="title" translatable="yes">Description</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext2"/>
+                      <attributes>
+                        <attribute name="text">2</attribute>
+                      </attributes>
                     </child>
                   </object>
                 </child>
