--- a/data/ui/add-applet.ui
+++ b/data/ui/add-applet.ui
@@ -19,9 +19,11 @@
             <child>
               <object class="GtkButton" id="cancel_btn">
                 <property name="label">gtk-cancel</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -33,9 +35,11 @@
             <child>
               <object class="GtkButton" id="add_btn">
                 <property name="label">gtk-add</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -78,10 +82,10 @@
                   <object class="GtkTreeSelection" id="treeview-selection1"/>
                 </child>
                 <child>
-                  <object class="GtkTreeViewColumn" id="name">
+                  <object class="GtkTreeViewColumn" id="name_column">
                     <property name="title" translatable="yes">Name</property>
                     <child>
-                      <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf1"/>
+                      <object class="GtkCellRendererPixbuf" id="icon_renderer"/>
                     </child>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext1"/>
@@ -92,7 +96,7 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                  <object class="GtkTreeViewColumn" id="desc_column">
                     <property name="title" translatable="yes">Description</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext2"/>
